@@ -144,8 +144,12 @@ __emutls_get_address (struct __emutls_object *obj)
       static __gthread_once_t once = __GTHREAD_ONCE_INIT;
       __gthread_once (&once, emutls_init);
       __gthread_mutex_lock (&emutls_mutex);
-      offset = ++emutls_size;
-      obj->loc.offset = offset;
+      offset = obj->loc.offset;
+      if (offset == 0)
+	{
+	  offset = ++emutls_size;
+	  obj->loc.offset = offset;
+	}
       __gthread_mutex_unlock (&emutls_mutex);
     }
 
